--- a/src/components/PhoneBook/PhoneBook.module.css
+++ b/src/components/PhoneBook/PhoneBook.module.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 400px;
-  margin: 50px auto;
+  margin: 70px auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -32,6 +32,11 @@
 .title {
   margin-top: 20px;
   margin-bottom: 10px;
+}
+
+.hero {
+  font-size: 40px;
+  text-align: center;
 }
 
 .label_search {
